<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/browseFragment"
        android:icon="@drawable/ic_nav_browse"
        android:title="@string/nav_browse" />
    <item
        android:id="@+id/rankingFragment"
        android:icon="@drawable/ic_nav_ranking"
        android:title="@string/nav_ranking" />
    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_nav_library"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
