<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:padding="@dimen/spacing_xxl"
    tools:context="com.group09.ComicReader.ui.onboarding.OnboardingLanguageFragment">

    <TextView
        android:id="@+id/tv_onboarding_language_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_language_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_xl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboarding_language_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/onboarding_language_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_language_title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tg_onboarding_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_language_subtitle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_language_vi"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_menu_language_vi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_language_en"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_menu_language_en" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_onboarding_continue"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/onboarding_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
