<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:padding="@dimen/spacing_xxl"
    tools:context="com.group09.ComicReader.ui.onboarding.OnboardingDobFragment">

    <TextView
        android:id="@+id/tv_onboarding_dob_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_dob_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_xl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboarding_dob_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/onboarding_dob_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_dob_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_onboarding_pick_dob"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/onboarding_dob_pick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_dob_subtitle" />

    <TextView
        android:id="@+id/tv_onboarding_dob_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_onboarding_pick_dob"
        tools:text="01/01/2000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_onboarding_continue"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:enabled="false"
        android:text="@string/onboarding_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
